--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -67,7 +67,7 @@
 <p><span class="badge badge-light">Canada Italy</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/gloo/a3a61d7a-15be-434f-94b6-41184a840fce/apply?lever-origin=applied&lever-source[0]=BuiltInColorado'>Gloo - Information Privacy Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/gloo/a3a61d7a-15be-434f-94b6-41184a840fce/apply?lever-origin=applied&lever-source[0]=BuiltInColorado'>Gloo - Information Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Information Privacy Analyst. Boulder, CO. Administration. Full-time. Submit your 
 application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
@@ -84,11 +84,11 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<h5><a href='https://formstack.applytojob.com/apply/okWvPyTidz/Privacy-And-Compliance-Analyst?source=GS'>Privacy and Compliance Analyst - Formstack - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://formstack.applytojob.com/apply/okWvPyTidz/Privacy-And-Compliance-Analyst?source=GS'>Privacy and Compliance Analyst - Formstack - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 29, 2019 ... Apply to Privacy and Compliance Analyst at Formstack in (Multiple states).</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobware.net/Job/Senior-Data-Privacy-Software-Engineer-m-f-d.354201865.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>Senior Data-Privacy Software Engineer (m/f/d) | Advantest | Job</a></h5> 
+<h5><a href='https://jobs.jobware.net/Job/Senior-Data-Privacy-Software-Engineer-m-f-d.354201865.html?jw_chl_seg=YOURJOBINGERMANY&skin=zaehlpixel_only'>Senior Data-Privacy Software Engineer (m/f/d) | Advantest | Job</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
@@ -100,7 +100,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/goldstonepartners/743999697192565-privacy-analyst'>Goldstone Partners, Inc. Privacy Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/goldstonepartners/743999697192565-privacy-analyst'>Goldstone Partners, Inc. Privacy Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -120,7 +120,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Washington, District of Columbia  San Francisco, California  Los Angeles, California  Atlanta, Georgia  Seattle, Washington  Philadelphia, Pennsylvania  Chicago, Illinois  Los Angeles, California  New York, New York</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
-<h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_experienced/job/San-Francisco/Privacy--Trust---Safety-Legal-Policy-Specialist_79790'>Privacy, Trust & Safety Legal Policy Specialist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://adobe.wd5.myworkdayjobs.com/en-US/external_experienced/job/San-Francisco/Privacy--Trust---Safety-Legal-Policy-Specialist_79790'>Privacy, Trust & Safety Legal Policy Specialist</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 18, 2019 ... At Adobe, you'll join our Legal Privacy, Trust & Safety team. We're seeking a 
 passionate, collaborative, and thoughtful legal specialist, who has prior 
@@ -188,7 +188,7 @@ trust?...</p>
 <p><span class="badge badge-light">Arlington, VA</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://verder.recruitee.com/o/cyber-security-privacy-specialist-vleuten'>
+<h5><a href='https://verder.recruitee.com/o/cyber-security-privacy-specialist-vleuten'>
       Cyber Security & Privacy Specialist - Verder
     </a></h5> 
 <p><span class="badge badge-light">Vleuten, Netherlands</span></p>
@@ -222,7 +222,7 @@ trust?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://bah.wd1.myworkdayjobs.com/en-US/BAH_Jobs/job/USA-VA-Alexandria-4800-Mark-Center-Dr/Privacy-and-Cybersecurity-Analyst_R0066225?source=DataPrivacyCareers.com'>Privacy and Cybersecurity Analyst</a></h5> 
+<h5><a href='https://bah.wd1.myworkdayjobs.com/en-US/BAH_Jobs/job/USA-VA-Alexandria-4800-Mark-Center-Dr/Privacy-and-Cybersecurity-Analyst_R0066225?source=DataPrivacyCareers.com'>Privacy and Cybersecurity Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Privacy and Cybersecurity Analyst. Key Role: Serve as a Cybersecurity and 
 privacy analyst for a DoD client and implement data analysis tools that meet 
@@ -290,7 +290,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-13</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=szvPjhwY&__jvsc=Twitter&bid=nCK3AKwe'>ServiceNow Careers - Privacy Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=opkdafwQ&__jvst=Employee+Referral&__jvsd=szvPjhwY&__jvsc=Twitter&bid=nCK3AKwe'>ServiceNow Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-05</p>
 <hr/>
@@ -334,7 +334,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-11</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/boxinc/jobs/1719749'>Job Application for Sr. Privacy Compliance Analyst at Box</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/boxinc/jobs/1719749'>Job Application for Sr. Privacy Compliance Analyst at Box</a></h5> 
 <p><span class="badge badge-light">Redwood City</span></p>
 <p>Posted on: 2019-06-04</p>
 <hr/>
@@ -359,7 +359,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p>5 days ago ... Privacy Analyst. at Lyft. San Francisco, CA and Seattle, WA. At Lyft, community is 
 what we are and it's what we do. It's what makes us different. To create the best?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vmware.wd1.myworkdayjobs.com/VMware/job/USA-California-Palo-Alto/Compliance-and-Privacy-Product-Analyst_R1905179'>Compliance and Privacy Product Analyst</a></h5> 
+<h5><a href='https://vmware.wd1.myworkdayjobs.com/VMware/job/USA-California-Palo-Alto/Compliance-and-Privacy-Product-Analyst_R1905179'>Compliance and Privacy Product Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>May 14, 2019 ... ... we work to solve our customers' toughest challenges through disruptive 
 technologies like edge computing, artificial intelligence, blockchain, machine 
@@ -370,7 +370,7 @@ learning,?...</p>
 <p>2 days ago ... The Associate Privacy Analyst provides administrative and analytical support to 
 Prime's privacy program, working closely with privacy team members as well as?...</p>
 <hr/>
-<h5><a href='https://frb.referrals.selectminds.com/jobs/data-privacy-associate-new-jersey-location-8900'>Data Privacy Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://frb.referrals.selectminds.com/jobs/data-privacy-associate-new-jersey-location-8900'>Data Privacy Associate (New Jersey location) - The Federal Reserve System Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-18</p>
 <hr/>
@@ -379,7 +379,7 @@ Prime's privacy program, working closely with privacy team members as well as?..
 <p>Apr 28, 2019 ... Blockchain Cryptographic Research Scientist (London/Paris). Global Services. 
 Core Business Services. Requisition #: GLO000QQ. Knowledge Manager?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/ajmn/job/oulM9fwu'>Al Jazeera Media Network Careers - Senior Privacy Compliance Specialist - Technical</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ajmn/job/oulM9fwu'>Al Jazeera Media Network Careers - Senior Privacy Compliance Specialist - Technical</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-08</p>
 <hr/>
@@ -387,7 +387,7 @@ Core Business Services. Requisition #: GLO000QQ. Knowledge Manager?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-07</p>
 <hr/>
-<h5><a href='https://questdiagnostics.csod.com/ux/ats/careersite/4/home/requisition/24589?c=questdiagnostics'>Compliance Privacy Analyst</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://questdiagnostics.csod.com/ux/ats/careersite/4/home/requisition/24589?c=questdiagnostics'>Compliance Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Apr 25, 2019 ... As a Compliance Privacy Analyst, you will work for the world leader in the 
 industry, with a career where you will have the opportunity to collaborate and 
@@ -417,7 +417,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/netflix/267449eb-6bf6-4f01-8cb5-e22ed58d9edb'>Netflix - Technical Program Manager - Privacy Assurance and Engineering</a></h5> 
+<h5><a href='https://jobs.lever.co/netflix/267449eb-6bf6-4f01-8cb5-e22ed58d9edb'>Netflix - Technical Program Manager - Privacy Assurance and Engineering</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-29</p>
 <hr/>
