--- a/ui.html
+++ b/ui.html
@@ -118,7 +118,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crosscast.be/job/ui-designer/?platform=hootsuite&utm_campaign=talent-ui-designer'>UI Designer | CrossCast - Freelance platform</a></h5> 
+<h5><a href='https://crosscast.be/job/ui-designer/?platform=hootsuite&utm_campaign=talent-ui-designer'>UI Designer | CrossCast - Freelance platform</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -289,7 +289,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Leamington Spa, Warwickshire</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/dealerspike.com/a66c0f85-05c2-48e2-aaba-e353526381bc'>Dealer Spike - UI/UX Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/dealerspike.com/a66c0f85-05c2-48e2-aaba-e353526381bc'>Dealer Spike - UI/UX Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -305,7 +305,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">San Diego, California  San Diego, CA</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.hulldailymail.co.uk/news/jobs/tui-hiring-hull-discount-holidays-3469937'>TUI is hiring in Hull and you will get generous discounts on holidays - Hull Live</a></h5> 
+<h5><a href='https://www.hulldailymail.co.uk/news/jobs/tui-hiring-hull-discount-holidays-3469937'>TUI is hiring in Hull and you will get generous discounts on holidays - Hull Live</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -355,7 +355,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://uiowa.referrals.selectminds.com/jobs/clinical-technical-specialist-5586'>Clinical/Technical Specialist - Jobs@UIOWA Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/clinical-technical-specialist-5586'>Clinical/Technical Specialist - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -407,7 +407,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uiowa.referrals.selectminds.com/jobs/phlebotomy-technician-i-pediatric-specialty-clinic-location-5590'>Phlebotomy Technician I - Pediatric Specialty Clinic Location - Jobs@UIOWA Careers</a></h5> 
+<h5><a href='https://uiowa.referrals.selectminds.com/jobs/phlebotomy-technician-i-pediatric-specialty-clinic-location-5590'>Phlebotomy Technician I - Pediatric Specialty Clinic Location - Jobs@UIOWA Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -451,7 +451,7 @@ Senior UI Engineer at Toggle in Greater London | React jobs | 42jobs.io
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://recruit.apo.ucla.edu/JPF05047'>Assistant Professor (JPF05047) - UCLA Academic RECRUIT</a></h5> 
+<h5><a href='https://recruit.apo.ucla.edu/JPF05047'>Assistant Professor (JPF05047) - UCLA Academic RECRUIT</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
